fix: align hamburger menu to bottom of navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 button {
-  @apply theme-text py-1 px-3 rounded;
+  @apply theme-text py-1 px-2 rounded;
 }
 
 a {
